--- a/images/templates/base.html
+++ b/images/templates/base.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>Emdee's Gallery - {{title}}</title>
+  <title>Ian's Gallery - {{title}}</title>
   {% else %}
-  <title> Emdee's Gallery </title>
+  <title> Ian's Gallery </title>
   {% endif %}
 
 <script data-require="jquery@*" data-semver="2.2.0" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
