--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -27,14 +27,14 @@
           </a>
 
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            {% for loca in location %}
-            <a class="dropdown-item" href="/?location={{location.id}}">{{loca.name}}</a>
+            {% for location in location %}
+            <a class="dropdown-item" href="/?location={{location.id}}">{{location.name}}</a>
             {%endfor%}
           </div>
       </ul>
     </div>
     <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}" method="get">
-      <input type="text" class="form-control" placeholder="Search Image" name="categories">
+      <input type="text" class="form-control" placeholder="Search Image" name="Category">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     </div>
